# SPLN2324

./: README.md
Sentiment Analysis/TP1/src/: METADATA.json  makepyproject.py  pyproject.toml
Sentiment Analysis/TP1/src/corpus/: HP_I.txt  HP_II.txt  HP_III.txt  HP_IV.txt  HP_IX.txt  HP_V.txt  HP_VI.txt  HP_VII.txt  HP_VIII.txt  HP_X.txt  HP_XI.txt  HP_XII.txt  HP_XIII.txt  HP_XIV.txt  HP_XV.txt  HP_XVI.txt  HP_XVII.txt
Sentiment Analysis/TP1/src/outputHP/: output_HP_I.txt  output_HP_II.txt  output_HP_III.txt  output_HP_IV.txt  output_HP_IX.txt  output_HP_V.txt  output_HP_VI.txt  output_HP_VII.txt  output_HP_VIII.txt  output_HP_X.txt  output_HP_XI.txt  output_HP_XII.txt  output_HP_XIII.txt  output_HP_XIV.txt  output_HP_XV.txt  output_HP_XVI.txt  output_HP_XVII.txt
Sentiment Analysis/TP1/src/sentilexpt/: __init__.py
Sentiment Analysis/TP1/src/vader/: vader.py
Sentiment Analysis/sentiment_analysis/: __init__.py
TPCs/TPC1/: README.md  output.txt  wordfreq.py
TPCs/TPC2/: README.md
TPCs/TPC2/word_freq/: __init__.py
TPCs/TPC3/: README.md  makepyproject.py  pyproject.toml
TPCs/TPC4/: README.md
TPCs/TPC5/: README.md  resultado.md
