
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "word_freq"
authors = [
    {name = "Robert Szabo", email = "roobertsz@gmail.com"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dynamic = ["version", "description"]

dependencies = [
    "jjcli"
]

[project.scripts]
wfreq = "word_freq:main"