
    [build-system]
    requires=["flit_core >=3.2,<4"]
    build-backend = "flit_core.buildapi"

    [project]
    name = "sentilexpt"
    authors = [
        {name = "Afonso Ferreira", email = "pg52669@alunos.uminho.pt"},
    ]

    version = "0.1.0"

    Classifiers = [
        "License :: OSI Approved :: MIT License",
    ]

    requires-python = ">=3.8"
    dynamic = ["description"]

    dependencies = [
        "jjcli",
        "jinja2",
        "vaderSentiment",
        "spacy",
        "nltk"
    ]

    [project.scripts]
    sentilexpt = "sentilexpt:main"
    